# lib/api-spec/openapi.yaml
@@ -721,11 +721,19 @@ components:
           type: array
           items:
             type: string
+        recommendedApplicationPermissions:
+          type: array
+          items:
+            type: string
         configuredApplicationPermissions:
           type: array
           items:
             type: string
         missingRequiredPermissions:
+          type: array
+          items:
+            type: string
+        missingRecommendedPermissions:
           type: array
           items:
             type: string
@@ -743,8 +751,10 @@ components:
         - targetTenantId
         - targetAppDisplayName
         - requiredApplicationPermissions
+        - recommendedApplicationPermissions
         - configuredApplicationPermissions
         - missingRequiredPermissions
+        - missingRecommendedPermissions
         - hasMissingRequiredPermissions
         - permissionCheckError
         - needsOnboarding
